[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project.urls]
Homepage = "https://github.com/yoshihikosuzuki/FASTK_python"

[project]
authors = [
  {name = "Yoshihiko Suzuki", email = "yoshi.suzuki.1992@gmail.com"},
]
dependencies = [
  "bits-yoshi >= 0.2",
  "plotly_light >= 2",
]
description = "Python wrappers for FastK"
license = {file = "LICENSE"}
name = "fastk"
readme = "README.md"
requires-python = ">=3.7"
version = "1.1.1"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["Histex.so", "Profex.so"]
