[metadata]
name = fastk
version = 0.1
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/FASTK_python
description = Python wrappers for FastK tools
long_description = file: README.md


[options]
zip_safe = False
python_requires = >= 3
package_dir =
  fastk = .
packages =
  fastk
install_requires =
  bits
dependency_links =
  git+https://git@github.com/yoshihikosuzuki/bits.git#egg=bits

[options.package_data]
* = Histex.so, Profex.so
