[metadata]
name = fastk
version = 1.1
author = Yoshihiko Suzuki
author_email = yoshi.suzuki.1992@gmail.com
url = https://github.com/yoshihikosuzuki/FASTK_python
description = Python wrappers for FastK tools
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
python_requires = >= 3
package_dir =
  fastk = .
packages =
  fastk
install_requires =
  bits-yoshi >= 0.1.1

[options.package_data]
* = Histex.so, Profex.so
